[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idi_ftm2j_shared", "src/idi_ftm2j_shared_infra"]

[project]
name = "idi-ftm2j-shared"
version = "0.1.0"
description = "Shared runtime utilities and Pulumi factories for FTM2J processors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.5",
    "requests>=2.33.1",
    "smart-open[s3]>=7.6.0",
    "tqdm>=4.67.3",
    "watchtower>=3.4.0",
]

[dependency-groups]
deploy = [
  "pip-audit>=2.10.0",
  "pytest>=9.0.3",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.15.12",
]

pulumi = [
  "pulumi>=3.0.0",
  "pulumi-aws>=6.0.0",
]

test = [
  "moto[logs,s3]>=5.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "ANN",
  "B",
  "C4",
  "D",
  "I",
  "N801",
  "N804",
  "N805",
  "PD",
  "PLR2004",
  "PTH",
  "Q",
  "S",
  "UP",
  "YTT",
]

ignore = [
  "D415",
  "ANN002",
  "ANN003",
  "B905",
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN001",
  "ANN201",
  "ANN202",
  "ANN204",
  "D102",
  "D103",
  "D104",
  "PLR2004",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
